# eos-phone-home

./: .gitattributes  .gitignore  50-eos-phone-home  Makefile  README  README.md  SCHEMA  activate  autogen.sh  census  census.old  census.sandbox  eos-phone-home  eos-phone-home-if-up  eos-phone-home.conf  eos-phone-home.path  eos-phone-home.service  eos-phone-home.timer  meson.build  sanitize  send-census  send-poke  test_eos-phone-home.py  ubucount.py
debian/: 46disable_census  46disable_poke  canonical-census.install  canonical-poke.install  changelog  control  copyright  eos-phone-home.install
test/: README-data-log  make-large-log
test_data/: compatible
